--- a/opp_gui/package.xml
+++ b/opp_gui/package.xml
@@ -26,6 +26,7 @@
   <depend>geometric_shapes</depend>
   <depend>geometry_msgs</depend>
   <depend>noether_msgs</depend>
+  <depend>heat_msgs</depend>
   <depend>pluginlib</depend>
   <depend>roscpp</depend>
   <depend>opp_area_selection</depend>
