integrated heat method, but heat method's paths are not smoothed, nor sub-sampled to desired point spacing

--- a/opp_path_selection/package.xml
+++ b/opp_path_selection/package.xml
@@ -16,6 +16,7 @@
 
   <depend>eigen_conversions</depend>
   <depend>geometry_msgs</depend>
+  <depend>shape_msgs</depend>
   <depend>opp_msgs_serialization</depend>
   <depend>pcl_ros</depend>
   <depend>roscpp</depend>
