updated interface to noether (#23)
* updated interface to noether

* added dependencies.rosinstall

* clang format

* revised dependicies to include cmake_common_scripts

* Add compile flag for CI to avoid known bug in 'try_compile' from 'noether_filtering' CMakeLists

* Applied CI CMake args to upstream workspace rather than target workspace

* Updated .rosinstall with custom perception_pcl package

Co-authored-by: mripperger <michael.ripperger@swri.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ jobs:
       - NOT_TEST_BUILD=true
       - BEFORE_INIT="apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654"
       - BADGE=xenial
+      - UPSTREAM_CMAKE_ARGS="-DNURBS_FOUND=TRUE"
 
 install:
   - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
