Replaced serialization of basic types with implementation provided by message_serialization package

--- a/opp_msgs_serialization/package.xml
+++ b/opp_msgs_serialization/package.xml
@@ -18,6 +18,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>roscpp_serialization</depend>
+  <depend>message_serialization</depend>
 
   <test_depend>rostest</test_depend>
 </package>
