--- a/opp_gui/package.xml
+++ b/opp_gui/package.xml
@@ -31,6 +31,7 @@
   <depend>opp_area_selection</depend>
   <depend>opp_msgs</depend>
   <depend>opp_database</depend>
+  <depend>pcl_ros</depend>
   <depend>rviz</depend>
   <depend>shape_msgs</depend>
   <depend>std_srvs</depend>
